// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInput renders correctly by default 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#fafcff",
          "borderColor": "#c1c1cd",
          "borderRadius": 16,
          "borderWidth": 1,
          "paddingVertical": 4,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
    testID="theme_input_container"
  >
    <Text
      style={
        [
          {
            "color": "#535365",
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "left": 12,
            "lineHeight": 24,
            "position": "absolute",
            "top": 12,
          },
          undefined,
        ]
      }
    >
      Enter your name
    </Text>
    <TextInput
      onChangeText={[Function]}
      style={
        [
          {
            "color": "#535365",
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="theme_input_text_input"
      value=""
    />
  </View>
</View>
`;

exports[`ThemeInput renders correctly with error message 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#fafcff",
          "borderColor": "#c1c1cd",
          "borderRadius": 16,
          "borderWidth": 1,
          "paddingVertical": 4,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
    testID="theme_input_container"
  >
    <Text
      style={
        [
          {
            "color": "#535365",
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "left": 12,
            "lineHeight": 24,
            "position": "absolute",
            "top": 12,
          },
          undefined,
        ]
      }
    >
      Email
    </Text>
    <TextInput
      onChangeText={[Function]}
      style={
        [
          {
            "color": "#535365",
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="theme_input_text_input"
      value=""
    />
  </View>
  <Text
    style={
      {
        "color": "#d70443",
        "fontFamily": "SourceSans3_600SemiBold",
        "fontSize": 12,
        "marginLeft": 12,
        "marginTop": 8,
      }
    }
  >
    Invalid email
  </Text>
</View>
`;

exports[`ThemeInput renders correctly with value (no placeholder) 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#fafcff",
          "borderColor": "#c1c1cd",
          "borderRadius": 16,
          "borderWidth": 1,
          "paddingVertical": 4,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
    testID="theme_input_container"
  >
    <TextInput
      onChangeText={[Function]}
      style={
        [
          {
            "color": "#535365",
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="theme_input_text_input"
      value="John"
    />
  </View>
</View>
`;
